ran the rewrite run from the intellij gradle section